--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Gardens'
 - !lcc 'SB'
+- GITenberg
 title: Garden Ornaments
 url: http://www.gutenberg.org/ebooks/34885
